src/objects/Contract_Non_Royalty_Cost_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Department__c</fullName>
        <label>Charge Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Non Royalty Cost Rules</relationshipLabel>
        <relationshipName>Contract_Non_Royalty_Cost_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost_Name__c</fullName>
        <label>Cost Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasted_Completion_Date__c</fullName>
        <label>Forecasted Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Period_End__c</fullName>
        <label>Maintenance Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Period_Start__c</fullName>
        <label>Maintenance Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due__c</fullName>
        <label>Payment Due</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Period_End__c</fullName>
        <label>Service Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Period_Start__c</fullName>
        <label>Service Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contract Non Royalty Cost Rule</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contract Non Royalty Cost Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Non Royalty Cost Rules</pluralLabel>
    <recordTypes>
        <fullName>Maintenance</fullName>
        <active>true</active>
        <label>Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>NRE</fullName>
        <active>true</active>
        <label>NRE</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <label>Service</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>